@@ -28,12 +28,17 @@
 #include <QTranslator>
 #include <QLocale>
 
+#if QT_VERSION < 0x040300
+#define lighter(x)	light(x)
+#define darker(x)	dark(x)
+#endif
 
-#if defined(Q_WS_X11)
 
 //-------------------------------------------------------------------------
-// Single application instance stuff (Qt/X11 only atm.)
+// Singleton application instance stuff (Qt/X11 only atm.)
 //
+
+#if defined(Q_WS_X11)
 
 #include <QX11Info>
 
@@ -269,9 +274,27 @@ int main ( int argc, char **argv )
 		return 2;
 	}
 
+	// Dark themes grayed/disabled color group fix...
+	QPalette pal(app.palette());
+	if (pal.base().color().value() < 0x7f) {
+		pal.setColorGroup(QPalette::Disabled,
+			pal.windowText().color().darker(),
+			pal.button(),
+			pal.light(),
+			pal.dark(),
+			pal.mid(),
+			pal.text().color().darker(),
+			pal.text().color().lighter(),
+			pal.base(),
+			pal.window());
+		app.setPalette(pal);
+	}
+
 	// Set default base font...
+	int iBaseFontSize = app.font().pointSize();
 	if (settings.iBaseFontSize > 0)
-		app.setFont(QFont(app.font().family(), settings.iBaseFontSize));
+		iBaseFontSize = settings.iBaseFontSize;
+	app.setFont(QFont(app.font().family(), iBaseFontSize));
 
 	// What style do we create these forms?
 	Qt::WindowFlags wflags = Qt::Window
