@@ -4160,6 +4160,16 @@
             </item>
             <item>
              <property name="text" >
+              <string>6</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>7</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
               <string>8</string>
              </property>
             </item>
